PostGIS 2.5.0beta2
2018/XX/XX
New since PostGIS 2.5.0beta1
  - #4115, Fix a bug that created MVTs with incorrect property values under
    parallel plans (Raúl Marín).

  See PostGIS 2.5.0 section for full details


PostGIS 2.5.0beta1
2018/07/03
New since PostGIS 2.5.0alpha
  - #1847, spgist 2d and 3d support for PG 11+
    (Esteban Zimányi and Arthur Lesuisse from Université Libre de Bruxelles (ULB),
      Darafei Praliaskouski)

  - Numerous packaging fixes
  See PostGIS 2.5.0 section for full details


PostGIS 2.5.0alpha
2018/05/28
See PostGIS 2.5.0 section for details

PostGIS 2.5.0
2018/xx/xx

* New Features *
  - #1847, spgist 2d and 3d support for PG 11+
    (Esteban Zimányi and Arthur Lesuisse from Université Libre de Bruxelles (ULB),
      Darafei Praliaskouski)
  - #4056, ST_FilterByM (Nicklas Avén)
  - #4050, ST_ChaikinSmoothing (Nicklas Avén)
  - #3989, ST_Buffer single sided option (Stephen Knox)
  - #3876, ST_Angle function (Rémi Cura)
  - #3564, ST_LineInterpolatePoints (Dan Baston)
  - #3896, PostGIS_Extensions_Upgrade() (Regina Obe)
  - #3913, Upgrade when creating extension from unpackaged (Sandro Santilli)
  - #2256, _postgis_index_extent() for extent from index (Paul Ramsey)
  - #3176, Add ST_OrientedEnvelope (Dan Baston)
  - #4029, Add ST_QuantizeCoordinates (Dan Baston)
  - #4063, Optional false origin point for ST_Scale (Paul Ramsey)
  - #4082, Add ST_BandFileSize and ST_BandFileTimestamp,
           extend ST_BandMetadata (Even Rouault)
  - #2597, Add ST_Grayscale (Bborie Park)
  - #4007, Add ST_SetBandPath (Bborie Park)
  - #4008, Add ST_SetBandIndex (Bborie Park)

* Breaking Changes *
  - #4054, ST_SimplifyVW changed from > tolerance to >= tolerance
  - #3885, version number removed from address_standardize lib file
          (Regina Obe)
  - #3893, raster support functions can only be loaded in the same schema
           with core PostGIS functions.
  - #4035, remove dummy pgis_abs type from aggregate/collect routines.