@@ -23,6 +23,19 @@ PG22|
 PG23|MULTILINESTRING((1 9,5 5),(2 2,5 5))
 PG24|MULTILINESTRING((1 9,5 5),(1 9,5 5))
 PG25|MULTILINESTRING((1 4095,1001 3095),(2 4094,1002 3094))
+PG26|POINT(-1 11)
+PG27|POINT(-1 -1)
+PG28|POINT(11 11)
+PG29|POINT(11 -1)
+PG30|
+PG31|POINT(11 -1)
+PG32|
+PG33|POINT(-1 11)
+PG34|
+PG35|POINT(4352 4352)
+PG36|
+PG37|
+PG38|
 TG1|GiEKBHRlc3QSDBICAAAYASIECTLePxoCYzEiAigBKIAgeAI=
 TG2|GiMKBHRlc3QSDhICAAAYASIGETLePwIBGgJjMSICKAEogCB4Ag==
 TG3|GiYKBHRlc3QSERICAAAYAiIJCQCAQArQD88PGgJjMSICKAEogCB4Ag==
